# multiagents-decanting

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: devcontainer.json
_spec/: 00_README.md  01_CONTEXTO_E_FILOSOFIA.md  02_ARQUITETURA.md  03_ESTRUTURA_DE_PASTAS.md  04_PROTOCOLOS.md  05_TEMPLATES.md  06_AGENT_TYPES.md  07_SKILLS_E_COMMANDS.md  08_DASHBOARD.md  09_MULTIPLATAFORMA.md  10_MIGRACAO_E_COEXISTENCIA.md  11_CRITERIOS_DE_ACEITE.md  12_RISCOS_E_FRONTEIRA.md  13_BRIEFING_PRA_OUTRA_SESSAO.md
agents/: arquiteto.md  asset-designer.md  dba.md  devops-installer.md  docs-writer.md  frontend-dev.md  llm-prompt.md  mobile-dev.md  pipeline-dev.md  qa-tester.md  security-auditor.md
commands/: decanting-dashboard.md  decanting-doctor.md  decanting-enable.md  decanting-explain.md  decanting-init.md  decanting-inspect.md  decanting-trust.md  decanting-tutorial.md  decanting-upgrade.md  mad-a2a.md  mad-audit.md  mad-dashboard.md  mad-decant.md  mad-doctor.md  mad-enable.md  mad-init.md  mad-inspect.md  mad-migrate-agent.md  mad-migrate-from-v02.md  mad-migrate-to-v1_3.md  mad-notify.md  mad-phase-approve-merge.md  mad-phase-approve-spec.md  mad-phase-emergency-bypass.md  mad-phase-next-phase.md  mad-phase-next.md  mad-phase-rework.md  (+16 more)
plugins/brainstorm/mcp/brainstorm_tools/: pyproject.toml
plugins/brainstorm/mcp/brainstorm_tools/brainstorm_tools/: archive.py  cluster.py  embed.py  pareto.py  server.py
plugins/brainstorm/mcp/brainstorm_tools/tests/: smoke_test.py
(+165 files in other folders)
